feat: java 8 support